--- a/jogo.html
+++ b/jogo.html
@@ -7,6 +7,10 @@
     </head>
     <body onclick="listener(event)">
 
+        <div id="timerPlaceholder">
+            <time id="timer"></time>
+        </div>
+
         <div class="container">
         </div>
 
