alterando estrutura do projeto

--- a/jogo.html
+++ b/jogo.html
@@ -2,7 +2,7 @@
     <head>
         <title>Campo Minado</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/jogo.css">
+        <link rel="stylesheet" href="styles/jogo.css">
       
     </head>
     <body onclick="listener(event)">
