--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
     <head>
         <title>Tile Test</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/user.css">
+        <link rel="stylesheet" href="styles/user.css">
       
     </head>
     <body>
