--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/menu.css">
     <title>Campo minado</title>
 </head>
 <body>
-    <h1>Campo minado</h1>
+    <div class="container">
+        <div class="header">
+            <h1>Campo minado</h1>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#">Jogar</a></li>
+                <li><a href="#">Como jogar</a></li>
+                <li><a href="#">Créditos</a></li>
+              </ul>
+        </div>
+    </div>
 </body>
 </html>
