ajustando menu para padrao windows

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>Campo minado</h1>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="#">Jogar</a></li>
-                <li><a href="#">Como jogar</a></li>
-                <li><a href="#">Créditos</a></li>
-              </ul>
+        <div class="pop-up">
+            <div class="header">
+                <p>Campo minado</p>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Jogar</a></li>
+                    <li><a href="#">Como jogar</a></li>
+                    <li><a href="#">Créditos</a></li>
+                  </ul>
+            </div>
         </div>
     </div>
 </body>
