ajustando página de login

--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
                 <p>Campo minado</p>
             </div>
             <div class="menu">
-                <ul>
-                    <li><a href="#">Jogar</a></li>
-                    <li><a href="#">Como jogar</a></li>
-                    <li><a href="#">Créditos</a></li>
-                  </ul>
+                <form action="" method="post">
+                    <div class="inputs">
+                        <div>
+                            <label for="user">Usuário:</label>
+                            <input id= "user"type="text" name="user" required>
+                        </div>
+                        <div>
+                            <label for="password">Senha:</label>
+                            <input id= "password" type="password" name="password" required>
+                        </div>
+                    </div>
+                    <div class="btn">
+                        <button type="submit">Entrar</button> 
+                    </div>
+                </form>
             </div>
         </div>
     </div>
