criando pagina criar conta

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <div class="btn">
                         <button type="submit">Entrar</button> 
                     </div>
+                    <div>
+                        <a href="./criar-conta.html">criar conta</a>
+                    </div>
                 </form>
             </div>
         </div>
