ajuste cadastro da conta

--- a/criar-conta.html
+++ b/criar-conta.html
@@ -46,10 +46,9 @@
                             <label for="senha">Senha:</label>
                             <input id="senha" type="text" name="senha" required>
                         </div>
-
                     </div>
                     <div class="btn">
-                        <button type="submit">Criar conta</button> 
+                        <button type="submit"><a href="./index.html">Criar conta</a></button> 
                     </div>
                 </form>
 
