--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="btn">
-                        <button type="submit">Entrar</button> 
+                        <button type="submit"><a href="./jogo.html">Entrar</a></button> 
                     </div>
                     <div>
                         <a href="./criar-conta.html">criar conta</a>
