--- a/jogo.html
+++ b/jogo.html
@@ -2,18 +2,59 @@
     <head>
         <title>Campo Minado</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles/index.css">
         <link rel="stylesheet" href="styles/jogo.css">
-      
     </head>
-    <body onclick="listener(event)">
+    <body>
+        <div class="tela-total">
+            <div class="jogo-atual">
+                <div class="info-jogo">
+                    <div>
+                        Tempo de partida:
+                    </div>
+                    <div>
+                        Configuração do tabuleiro:
+                    </div>
+                    <div>
+                        Modalidade de partida:
+                    </div>
+                    <div>
+                        Tempo restante:
+                    </div>
+                </div>
+                <div class="jogo">
+                    <button><a href="">Modo trapaça</a></button>
+                    <p>o jogo será apresentado aqui!</p>
+                </div>
+            </div>
 
-        <div id="timerPlaceholder">
-            <time id="timer"></time>
+            <div class="historico">
+                <div>
+                    <a href="./index.html"><p>voltar ao menu</p></a>
+                </div>
+                <h3>Histórico</h3>
+                <div class="ultimos-jogos">
+                    <div>
+                         Nome do jogador:
+                    </div>
+                    <div>
+                         Dimensões do campo:
+                     </div>
+                     <div>
+                         N° de bombas no campo
+                     </div>
+                     <div>
+                         Modalidade da partida:
+                     </div>
+                     <div>
+                         Tempo gasto:
+                     </div>
+                     <div>
+                         Resultado:
+                     </div>
+                 </div>
+            </section>
         </div>
-
-        <div class="container">
-        </div>
-
-        <script src="./Js/jogo.js"></script>
+        
     </body>
 </html> 
