--- a/jogo.html
+++ b/jogo.html
@@ -29,11 +29,32 @@
             </div>
 
             <div class="historico">
-                <div>
-                    <a href="./index.html"><p>voltar ao menu</p></a>
+                <div class="links">
+                    <a href="./ranking.html"><p>ver ranking global</p></a>
+                    <a href="./index.html"><p>sair</p></a>
                 </div>
                 <h3>Histórico</h3>
                 <div class="ultimos-jogos">
+                    <div>
+                         Nome do jogador:
+                    </div>
+                    <div>
+                         Dimensões do campo:
+                     </div>
+                     <div>
+                         N° de bombas no campo
+                     </div>
+                     <div>
+                         Modalidade da partida:
+                     </div>
+                     <div>
+                         Tempo gasto:
+                     </div>
+                     <div>
+                         Resultado:
+                     </div>
+                 </div>
+                 <div class="ultimos-jogos">
                     <div>
                          Nome do jogador:
                     </div>
