pagina editar informacoes

--- a/jogo.html
+++ b/jogo.html
@@ -31,6 +31,7 @@
             <div class="historico">
                 <div class="links">
                     <a href="./ranking.html"><p>ver ranking global</p></a>
+                    <a href="./editar-cadastro.html"><p>editar informações</p></a>
                     <a href="./index.html"><p>sair</p></a>
                 </div>
                 <h3>Histórico</h3>
