--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p>Campo minado</p>
             </div>
             <div class="menu">
-                <form action="" method="post">
+                <form>
                     <div class="inputs">
                         <div>
                             <label for="user">Usuário:</label>
