--- a/jogo.html
+++ b/jogo.html
@@ -23,16 +23,42 @@
                     </div>
                 </div>
                 <div class="jogo">
-                    <button><a href="">Modo trapaça</a></button>
-                    <p>o jogo será apresentado aqui!</p>
+                    <br><br>
+                    <p>o jogo será apresentado aqui!</p> <br><br><br><br><br><br>
+
+                    <label for="grid_columns">Quantidade de colunas:</label>
+                    <input type="number" min="6" max="20" value="10" onchange="valueChange(event)" required>
+
+                    <br><br>
+
+                    <label for="grid_rows">Quantidade de fileiras:</label>
+                    <input id="grid_rows" type="number" min="6" max="20" value="8" onchange="valueChange(event)" required>
+
+                    <br><br>
+
+                    <label for="bomb_qnt">Quantidade de bombas:</label>
+                    <input id="bomb_qnt" type="number" min="1" max="79" value="10" onchange="valueChange(event)" required>
+                        
+                    <br><br>
+
+                    <label for="rivotril">Modo Rivotril:</label>
+                    <input type="checkbox" onchange="rivotrilSwitch(event)" name="rivotril" id="rivotril">
+                    
+                    <br><br>
+
+                    <button onclick="jogar()"><a href="./jogo.html">Jogar</a></button>
+
+                    <button disabled> Modo trapaça </button >
+
+
                 </div>
             </div>
 
             <div class="historico">
                 <div class="links">
-                    <a href="./ranking.html"><p>ver ranking global</p></a>
-                    <a href="./editar-cadastro.html"><p>editar informações</p></a>
-                    <a href="./index.html"><p>sair</p></a>
+                    <button><a href="./ranking.html"><p>ver ranking global</p></a> </button>
+                    <button><a href="./editar-cadastro.html"><p>editar informações</p></a> </button>
+                    <button><a href="./index.html"><p>sair</p></a> </button>
                 </div>
                 <h3>Histórico</h3>
                 <div class="ultimos-jogos">
