--- a/ranking.html
+++ b/ranking.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Ranking global</h1>
     <div class="links"> 
-        <a href="./jogo.html"><p>voltar para o jogo</p></a>
-        <a href="./index.html"><p>sair</p></a>
+        <button><a href="./jogo.html"><p>voltar para o jogo</p></a> </button>
+        <button><a href="./index.html"><p>sair</p></a></button>  
     </div>
     <div class="colocacoes">
         <table>
