--- a/criar-conta.html
+++ b/criar-conta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="./styles/editar-cadastro.css">
     <title>Campo minado</title>
 </head>
 <body>
