--- a/editar-cadastro.html
+++ b/editar-cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="./styles/editar-cadastro.css">
     <title>Campo minado</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="menu">
                 <p>Editar conta</p>
                 <br><br>
-                <form action="" method="post">
+                <form>
                     <div class="inputs">
                         <div>
                             <label for="name">Nome completo:</label>
