--- a/editar-cadastro.html
+++ b/editar-cadastro.html
@@ -16,19 +16,19 @@
             <div class="menu">
                 <p>Editar conta</p>
                 <br><br>
-                <form>
+                <form action="./jogo.html">
                     <div class="inputs">
                         <div>
                             <label for="name">Nome completo:</label>
-                            <input id= "name"type="text" name="name" required>
+                            <input id= "name" type="text" name="name" required>
                         </div>
                         <div>
                             <label for="data-nascimento">Data de nascimento:</label>
-                            <input id= "data-nascimento"type="text" name="name" disabled>
+                            <input id= "data-nascimento" type="date" name="name" disabled>
                         </div>
                         <div>
                             <label for="cpf">CPF:</label>
-                            <input id= "cpf" type="text" name="cpf" disabled>
+                            <input id= "cpf" type="number" name="cpf" disabled>
                         </div>
                         <div>
                             <label for="telefone">Telefone:</label>
@@ -36,7 +36,7 @@
                         </div>
                         <div>
                             <label for="e-mail">E-mail:</label>
-                            <input id= "e-mail" type="text" name="email" required>
+                            <input id= "e-mail" type="email" name="email" required>
                         </div>
                         <div>
                             <label for="username">Username:</label>
@@ -44,11 +44,11 @@
                         </div>
                         <div>
                             <label for="senha">Senha:</label>
-                            <input id="senha" type="text" name="senha" required>
+                            <input id="senha" type="password" name="senha" required>
                         </div>
                     </div>
                     <div class="btn">
-                        <button type="submit"><a href="./jogo.html">Salvar</a></button> 
+                        <button type="submit">Salvar</button> 
                     </div>
                 </form>
 
