--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <p>Campo minado</p>
             </div>
             <div class="menu">
-                <form>
+                <form action="./jogo.html">
                     <div class="inputs">
                         <div>
                             <label for="user">Usuário:</label>
-                            <input id= "user"type="text" name="user" required>
+                            <input id= "user" type="text" name="user" required>
                         </div>
                         <div>
                             <label for="password">Senha:</label>
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="btn">
-                        <button type="submit"><a href="./jogo.html">Entrar</a></button> 
+                        <button type="submit">Entrar</button> 
                     </div>
                     <div>
                         <a href="./criar-conta.html">criar conta</a>
