--- a/criar-conta.html
+++ b/criar-conta.html
@@ -47,8 +47,8 @@
                             <input id="senha" type="password" name="senha" required>
                         </div>
                     </div>
-                    <div class="btn">
-                        <button type="submit">Criar conta</button>
+                    <div class="btn-envio">
+                        <button class="btn" type="submit">Criar conta</button>
                     </div>
                 </form>
             </div>
