--- a/editar-cadastro.html
+++ b/editar-cadastro.html
@@ -47,8 +47,8 @@
                             <input id="senha" type="password" name="senha" required>
                         </div>
                     </div>
-                    <div class="btn">
-                        <button type="submit">Salvar</button> 
+                    <div class="btn-envio">
+                        <button class="btn"type="submit">Salvar</button> 
                     </div>
                 </form>
 
