solucionando erros w3 check

--- a/ranking.html
+++ b/ranking.html
@@ -108,8 +108,8 @@
     </div>
     <br><br><br>
     <div class="links"> 
-        <button><a href="./jogo.html"><p>voltar para o jogo</p></a> </button>
-        <button><a href="./index.html"><p>sair</p></a></button>  
+        <a class="btn" href="./jogo.html">voltar para o jogo</a>
+        <a class="btn" href="./index.html">sair</a>
     </div>
 </body>
 </html>
