--- a/criar-conta.html
+++ b/criar-conta.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="pop-up">
+        <div class="card">
             <div class="header">
                 <p>Campo minado</p>
             </div>
-            <div class="menu">
+            <div class="formulario">
                 <p>Criar conta</p>
                 <br><br>
                 <form action="./index.html">
