--- a/editar-cadastro.html
+++ b/editar-cadastro.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="pop-up">
+        <div class="card">
             <div class="header">
                 <p>Campo minado</p>
             </div>
-            <div class="menu">
+            <div class="formulario">
                 <p>Editar conta</p>
                 <br><br>
                 <form action="./jogo.html">
