--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="./styles/formulario.css">
     <title>Campo minado</title>
 </head>
 <body>
-    <div class="container">
-        <div class="pop-up">
-            <div class="header">
-                <p>Campo minado</p>
+    <main class="container">
+        <section class="card">
+            <div class="header-formulario">
+                <h1>Campo minado</h1>
             </div>
-            <div class="menu">
+            <div class="formulario">
                 <form action="./jogo.html">
                     <div class="inputs">
                         <div>
@@ -33,7 +33,7 @@
                     </div>
                 </form>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
 </body>
 </html>
