ajustando css e tags semanticas

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main class="container">
         <section class="card">
-            <div class="header-formulario">
+            <section class="header">
                 <h1>Campo minado</h1>
-            </div>
-            <div class="formulario">
+            </section>
+            <section class="formulario">
                 <form action="./jogo.html">
                     <div class="inputs">
                         <div>
@@ -32,7 +32,7 @@
                         <a href="./criar-conta.html">criar conta</a>
                     </div>
                 </form>
-            </div>
+            </section>
         </section>
     </main>
 </body>
