--- a/criar-conta.html
+++ b/criar-conta.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/editar-cadastro.css">
+    <link rel="stylesheet" href="./styles/formulario.css">
     <title>Campo minado</title>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="header">
-                <p>Campo minado</p>
-            </div>
-            <div class="formulario">
-                <p>Criar conta</p>
+    <main class="container">
+        <section class="card">
+            <section class="header">
+                <h1>Campo minado</h1>
+            </section>
+            <section class="formulario">
+                <h1>Criar conta</h1>
                 <br><br>
                 <form action="./index.html">
                     <div class="inputs">
@@ -51,8 +51,8 @@
                         <button class="btn" type="submit">Criar conta</button>
                     </div>
                 </form>
-            </div>
-        </div>
-    </div>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
