ajustando tags semanticas

--- a/criar-conta.html
+++ b/criar-conta.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="btn-envio">
-                        <button class="btn" type="submit">Criar conta</button>
+                        <button type="submit">Criar conta</button>
                     </div>
                 </form>
             </section>
