--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                             <input id= "password" type="password" name="password" required>
                         </div>
                     </div>
-                    <div class="btn">
+                    <br>
+                    <div class="btn-envio">
                         <button type="submit">Entrar</button> 
                     </div>
                     <div>
