--- a/jogo.html
+++ b/jogo.html
@@ -59,6 +59,15 @@
                     <p>Tempo gasto:</p>
                     <p>Resultado:</p>
                 </section>
+                <section class="ultimos-jogos">
+                    <p>Nome do jogador:</p>
+                    <p>Dimensões do campo:</p>
+                    <p>N° de bombas no campo:</p>
+                    <p>Modalidade da partida:</p>
+                    <p>Tempo gasto:</p>
+                    <p>Resultado:</p>
+                </section>
+                
                 <br><br>
                 <nav class="links" aria-label="Navegação">
                     <a href="./ranking.html" class="btn" aria-label="Ver ranking global">Ver ranking global</a>
