ajustando tags semanticas

--- a/ranking.html
+++ b/ranking.html
@@ -107,9 +107,9 @@
         </table>
     </div>
     <br><br><br>
-    <div class="links"> 
-        <a class="btn" href="./jogo.html">voltar para o jogo</a>
-        <a class="btn" href="./index.html">sair</a>
-    </div>
+    <nav class="links" aria-label="Navegação">
+        <a class="btn" href="./jogo.html">Voltar para o jogo</a>
+        <a class="btn" href="./index.html">Sair</a>
+    </nav>
 </body>
 </html>
