--- a/jogo.html
+++ b/jogo.html
@@ -11,7 +11,7 @@
         <main class="container">
             <section class="jogo-atual">
                 <div class="info-jogo">
-                    <p><b>Tempo de partida:</b></p>
+                    <p><b>Tempo de partida: <div id="tempoPartida"> 0 segundos </div></b></p>
                     <p><b> Configuração do tabuleiro: </b>  <div id="configuracaoTabuleiro"></div> </p>
                     <p><b> Modalidade de partida: </b> <div id="modalidadePartida"></div></p>
                     <p><b>Tempo restante: </b> <div id="timerDisplay"></div></p>
