--- a/criar-conta.html
+++ b/criar-conta.html
@@ -11,10 +11,10 @@
     <main class="container">
         <section class="card">
             <section class="header">
-                <h1>Campo minado</h1>
+                <h2>Campo minado</h2>
             </section>
-            <section class="formulario">
-                <h1>Criar conta</h1>
+            <div class="formulario">
+                <h2>Criar conta</h2>
                 <br><br>
                 <form action="./index.html">
                     <div class="inputs">
@@ -51,7 +51,7 @@
                         <button type="submit">Criar conta</button>
                     </div>
                 </form>
-            </section>
+            </div>
         </section>
     </main>
 </body>
