--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main class="container">
-        <section class="card">
+        <div class="card">
             <section class="header">
-                <h1>Campo minado</h1>
+                <h2>Campo minado</h2>
             </section>
-            <section class="formulario">
+            <div class="formulario">
                 <form action="./jogo.html">
                     <div class="inputs">
                         <div>
@@ -33,8 +33,8 @@
                         <a href="./criar-conta.html">criar conta</a>
                     </div>
                 </form>
-            </section>
-        </section>
+            </div>
+        </div>
     </main>
 </body>
 </html>
